# Onedow

./: .gitattributes  .gitignore  CMakeLists.txt  TODO.md  WiNILL.sln  glad.c
.github/workflows/: macos-build.yml
Include/glad/: glad.h
WiNILL/: Achievements.h  Augment.h  Bomber.h  Boss.h  Bullet.h  Codex.h  CollisionSystem.h  DrawPrim.h  ExpSystem.h  FakeWindow.cpp  FakeWindow.h  GameManager.cpp  GameManager.h  GlitchBoss.h  IconSystem.h  Juice.h  Meta.h  Monster.h  MonsterManager.h  Platform.h  PlayerStats.h  PolymorphBoss.h  RangedMob.h  ReloadRunnerBoss.h  Resource.aps  Resource.rc  Resource1.aps  SaveSystem.h  Settings.h  SpamBoss.h  TextRenderer.h  Translations.h  Weapons.h  WiNILL.aps  WiNILL.vcxproj  WiNILL.vcxproj.filters  WindowFx.cpp  WindowFx.h  main.cpp  onedow_save.cfg  (+1 more)
WiNILL/Resource/: README.txt
